--- a/selmor/test-output/index.html
+++ b/selmor/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ammulu\AppData\Local\Temp\testng-eclipse-685252491\testng-customsuite.xml</span>
+                    <span>C:\Users\ammulu\AppData\Local\Temp\testng-eclipse--195094408\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="com.fit.selmor.fb.testcases.FB_TC" class="method navigator-link" hash-for-method="fb_login">fb_login</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="com.fit.selmor.AppTest" class="method navigator-link" hash-for-method="hello">hello</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,14 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.fit.selmor.fb.testcases.FB_TC</span>
+              <span class="class-name">com.fit.selmor.AppTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="fb_login">
-                  </a> <!-- fb_login -->
-                  <span class="method-name">fb_login</span>
+                  <a name="hello">
+                  </a> <!-- hello -->
+                  <span class="method-name">hello</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -137,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ammulu\AppData\Local\Temp\testng-eclipse-685252491\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ammulu\AppData\Local\Temp\testng-eclipse--195094408\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -146,7 +146,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.fit.selmor.fb.testcases.FB_TC&quot;/&gt;
+      &lt;class name=&quot;com.fit.selmor.AppTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -188,14 +188,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'fb_login')
-data.setCell(0, 2, 'com.fit.selmor.fb.testcases.FB_TC')
-data.setCell(0, 3, 16368);
+data.setCell(0, 1, 'hello')
+data.setCell(0, 2, 'com.fit.selmor.AppTest')
+data.setCell(0, 3, 77);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 16 seconds</span>
+              <span class="suite-total-time">Total running time: 77 ms</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -221,9 +221,9 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.fit.selmor.fb.testcases.FB_TC</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.fit.selmor.AppTest</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">fb_login</span>
+                <span class="method-name">hello</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
